WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88670
[BlackBerry] Default font settings are getting deleted
https://bugs.webkit.org/show_bug.cgi?id=88670
Summary
[BlackBerry] Default font settings are getting deleted
Eli Fidler
Reported
2012-06-08 10:38:10 PDT
WebSettings is overriding the default font settings with "", which deletes them.
Attachments
Patch
(4.59 KB, patch)
2012-06-08 11:57 PDT
,
Eli Fidler
no flags
Details
Formatted Diff
Diff
Patch
(4.59 KB, patch)
2012-06-08 12:20 PDT
,
Eli Fidler
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eli Fidler
Comment 1
2012-06-08 11:57:28 PDT
Created
attachment 146622
[details]
Patch
Rob Buis
Comment 2
2012-06-08 12:08:49 PDT
Comment on
attachment 146622
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=146622&action=review
Looks good, testcase can be improved a bit
> LayoutTests/fonts/valid-standard-font.html:6 > + window.setTimeout(runTest,0);
Needs a space char after comma.
> LayoutTests/fonts/valid-standard-font.html:7 > + function runTest(){
Needs a space char before {
> LayoutTests/fonts/valid-standard-font.html:13 > + if (window.layoutTestController) {
This is usually done first.
Eli Fidler
Comment 3
2012-06-08 12:20:24 PDT
Created
attachment 146625
[details]
Patch
Rob Buis
Comment 4
2012-06-08 12:33:56 PDT
Comment on
attachment 146625
[details]
Patch LGTM.
WebKit Review Bot
Comment 5
2012-06-08 12:56:15 PDT
Comment on
attachment 146625
[details]
Patch Rejecting
attachment 146625
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: m/tools/gyp --revision 1409 --non-interactive --force --accept theirs-conflict --ignore-externals returned non-zero exit status 1 in /mnt/git/webkit-commit-queue/Source/WebKit/chromium Error: 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 113. Re-trying 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' Died at /mnt/git/webkit-commit-queue/Tools/Scripts/webkitdirs.pm line 2476. Full output:
http://queues.webkit.org/results/12914630
WebKit Review Bot
Comment 6
2012-06-08 17:07:55 PDT
Comment on
attachment 146625
[details]
Patch Clearing flags on attachment: 146625 Committed
r119879
: <
http://trac.webkit.org/changeset/119879
>
WebKit Review Bot
Comment 7
2012-06-08 17:08:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug