[BlackBerry] Default font settings are getting deleted https://bugs.webkit.org/show_bug.cgi?id=88670

Reviewed by Rob Buis.

Source/WebKit/blackberry:

RIM PR: 163720

WebSettings is overriding the default font settings with "", which deletes them.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::didChangeSettings):

LayoutTests:

This test crashes if -webkit-body (i.e.  WebCore::Settings::standardFontFamily())
is not a valid font family.

* fonts/valid-standard-font.html: Added.


Canonical link: https://commits.webkit.org/106515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119879 268f45cc-cd09-0410-ab3c-d52691b4dbfc